Affecting changes sent by Victor March 26th.

--- a/app/views/applications/decks_docks_marine_boardwalk.html.erb
+++ b/app/views/applications/decks_docks_marine_boardwalk.html.erb
@@ -3,12 +3,11 @@
 <section class="main-section group">
 	<img class="main-pic" src="/applications/decks/decks-main.png" alt="Decks Muro application">
 	<div class="description">
-		<h3 class="catch-phrase">Fasten your deck, dock, or boardwalk in no time at
-	all with Muro’s proven Auto-Feed Screw Driving Systems.</h3>
+		<h3 class="catch-phrase">Fasten your deck, dock or boardwalk in no time with one of Muro’s proven Auto-Feed Screw Driving Systems.</h3>
 			<ul class="highlights">
 				<li>Drive screws quickly and consistently.</li>
-				<li>Stand up while driving screws down, no more getting on your hands and knees.</li>
-				<li>We have screws for any project: PT lumber, composite decks, cedar and Exotic Hardwoods</li>
+				<li>Stand up while driving screws, no more getting on your hands and knees.</li>
+				<li>We have screws for any project: PT lumber, composite decking, cedar and Exotic Hardwoods.</li>
 				<li>Ergonomically friendly - your back will thank you!</li>
 				<li>Adjustable depth control for repeatable countersinking, no more raised screw heads.</li>
 			</ul>
@@ -21,7 +20,7 @@
 		<a href=""><img src="/applications/decks/speed-driver.png" alt="Speed Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
 			<h4><a href="">FDVL41 - Speed Driver</a></h4>
-			<p>Purpose built, industrial strength coil feed system for the discriminating contractor.  No pre-drilling required - even for hardwoods.
+			<p>Purpose built, industrial strength coil feed system for the discriminating contractor.  No pre-drilling required - even for exotic hardwoods.
 			Stands up to any job thrown at it.
  			<strong><%= link_to "Find out more", products_tool_path(:id=>5)%></strong>.</p>
 		</div>
@@ -30,7 +29,7 @@
 		<a href=""><img src="/applications/decks/ultra-driver.png" alt="Speed Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
 			<h4><a href="">CH7390 - Ultra Driver</a></h4>
-			<p>The lighter-weight strip feed alternative. Ergonomically friendly and drives screws in a flash. No pre-drilling required - even for hardwoods.
+			<p>The lighter-weight strip feed alternative. Ergonomically friendly and drives screws in a flash. No pre-drilling required - even for exotic hardwoods.
 			<strong><%= link_to "Find out more", products_tool_path(:id=>1)%></strong>.</p>
 		</div>
 	</article>
