--- a/app/views/applications/flooring.html.erb
+++ b/app/views/applications/flooring.html.erb
@@ -8,10 +8,10 @@ Auto-Feed Screw Driving Systems will fasten your subfloor
 and underlayment with ease.
 </h3>
 			<ul class="highlights">
-				<li>Fasten subfloor down while standing up with a single push.</li>
-				<li>Screw down large surface areas on your jobsite in minutes.</li>
-				<li>Fast and efficient, load your tool with Muro collated fasteners and you’re good to go.</li>
-				<li>Makes flooring fastening simple and easy you’ll never go back to the old way again.</li>
+				<li>Fasten subfloor while standing up with a single push.</li>
+				<li>Screw down large surface areas in minutes.</li>
+				<li>Fast and efficient - load your tool with Muro collated fasteners and you’re good to go.</li>
+				<li>Makes flooring fastening simple and easy - you’ll never go back to the old way again.</li>
 				<li>Used by professional contractors or do-it-yourself home owners.</li>
 			</ul>
 	</div>
@@ -24,16 +24,16 @@ and underlayment with ease.
 		<a href=""><img src="/applications/flooring/speed-driver.png" alt="Speed Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
 			<h4><a href="">FDVL41 - Speed Driver</a></h4>
-			<p>Purpose built, industrial strength coil feed system for the discriminating contractor. 150 screws per coil, largest payload in the industry. Stands up to any job thrown at it.
+			<p>Purpose built, industrial strength coil feed system for the discriminating contractor. 150 screws per coil - largest payload in the industry. Stands up to any job thrown at it.
 <strong><a href="">Find out more.</a></strong></p>
 		</div>
 	</article>
 	<article>
 		<a href=""><img src="/applications/flooring/ultra-pro.png" alt="Ultra Pro Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
-			<h4><a href="">CH7392SF - Ultra Pro Screwdriver
+			<h4><a href="">CH7392SF - Ultra Driver
 </a></h4>
-			<p>The lighter-weight strip feed alternative. Ergonomically friendly and drives screws in a flash. 4000 rpm model for flooring.<br>x<strong><a href=""> Find out more.</a></strong></p>
+			<p>The lighter-weight strip feed alternative. Ergonomically friendly and drives screws in a flash with a 4000 rpm motor.<br>x<strong><a href=""> Find out more.</a></strong></p>
 		</div>
 	</article>
 
