--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,7 +81,7 @@
 					<li><%= link_to "Flooring", applications_flooring_path %></li>
 					<li><%= link_to "Drywall", applications_drywall_path %></li>
 					<li><%= link_to "Roofing", applications_roofing_path %></li>
-					<li><%= link_to "Trailer / RV / Bus", applications_trailer_bus_rv_path %></li>
+					<li><%= link_to "Truck Body / Trailer / RV / Bus", applications_truck_trailer_bus_rv_path %></li>
 					<li><%= link_to "More Applications", applications_more_applications_path %></li>
 				</ul>
 			</li>
