--- a/app/views/products/screws/index.html.erb
+++ b/app/views/products/screws/index.html.erb
@@ -14,7 +14,7 @@
 
 <div class="selection tool">
   <a href="<%= products_screw_path(:id=>3) %>"><img src="/products/screws/metal-pro-tool-screws.png" alt="CH7260 - Metal Pro Tool Screws"></a>
-  <%= link_to "CH7260 - Metal Pro Tool Screws", products_screw_path(:id=>3) %>
+  <%= link_to "CH7260 - Metal Pro Screws", products_screw_path(:id=>3) %>
 </div>
 <div class="selection tool">
   <a href="<%= products_screw_path(:id=>4) %>"><img src="/products/screws/power-driver-screws.png" alt="FLVL41 - Power Driver Screws"></a>
@@ -33,12 +33,12 @@
 
 <div class="selection tool">
   <a href="<%= products_screw_path(:id=>7) %>"><img src="/products/screws/coil-hex-screws.png" alt="LWVL32 - Coil Hex Auto Feed System Screws"></a>
-  <%= link_to "LWVL32 - Coil Hex Auto Feed System Screws", products_screw_path(:id=>7) %>
+  <%= link_to "LWVL32 - Coil Auto Feed System Screws", products_screw_path(:id=>7) %>
 </div>
 
 <div class="selection tool">
   <a href="<%= products_screw_path(:id=>8) %>"><img src="/products/screws/coil-auto-screws.png" alt="LHVL32 - Coil Auto Feed Screws"></a>
-  <%= link_to "LHVL32 - Coil Auto Feed Screws", products_screw_path(:id=>8) %>
+  <%= link_to "LHVL32 - Coil Hex Auto Feed System Screws", products_screw_path(:id=>8) %>
 </div>
 
 <div class="selection tool">
