--- a/app/views/products/tools/index.html.erb
+++ b/app/views/products/tools/index.html.erb
@@ -1,6 +1,6 @@
 <section class="tools group">
   <h2 class="heading">Tools</h2>
-  <p>Below are the Auto-Feed Tools exclusively made by Muro North America. Click on a tool below for details.</p>
+  <p>Below are the Auto-Feed Tools made exclusively by Muro North America. Click on a tool below for details.</p>
 
 <div class="selection tool">
   <a href="<%= products_tool_path(:id=>1) %>"><img src="/products/tools/index/ultra-driver.png" alt="CH7390 - Ultra Driver"></a>
@@ -14,7 +14,7 @@
 
 <div class="selection tool">
   <a href="<%= products_tool_path(:id=>3) %>"><img src="/products/tools/index/metal-pro-tool.png" alt="CH7260 - Metal Pro Tool"></a>
-  <%= link_to "CH7260 - Metal Pro Tool", products_tool_path(:id=>3) %>
+  <%= link_to "CH7260 - Metal Pro", products_tool_path(:id=>3) %>
 </div>
 <div class="selection tool">
   <a href="<%= products_tool_path(:id=>4) %>"><img src="/products/tools/index/power-driver.png" alt="FLVL41 - Power Driver"></a>
@@ -33,12 +33,12 @@
 
 <div class="selection tool">
   <a href="<%= products_tool_path(:id=>7) %>"><img src="/products/tools/index/lwvl32.png" alt="LWVL32 - Coil Hex Auto Feed System"></a>
-  <%= link_to "LWVL32 - Coil Hex Auto Feed System", products_tool_path(:id=>7) %>
+  <%= link_to "LWVL32 - Coil Auto Feed System", products_tool_path(:id=>7) %>
 </div>
 
 <div class="selection tool">
   <a href="<%= products_tool_path(:id=>8) %>"><img src="/products/tools/index/lhvl32.png" alt="LHVL32 - Coil Auto Feed"></a>
-  <%= link_to "LHVL32 - Coil Auto Feed", products_tool_path(:id=>8) %>
+  <%= link_to "LHVL32 - Coil Hex Auto Feed System", products_tool_path(:id=>8) %>
 </div>
 
 <div class="selection tool">
