--- a/app/views/applications/trailer_bus_rv.html.erb
+++ b/app/views/applications/trailer_bus_rv.html.erb
@@ -1,13 +1,13 @@
-<h2 class="heading">TRAILER / BUS / RV</h2>
+<h2 class="heading">TRUCK BODY / TRAILER / BUS / RV</h2>
 
 <section class="main-section group">
 	<img class="main-pic" src="/applications/trailer/trailer-main.png" alt="trailer Muro tools application">
 	<div class="description">
 		<h3 class="catch-phrase">The proven solution for truck body, RV, trailer and bus manufacturing.
-		Fasten down your floors and side walls
+		Fasten your floors and side walls
 		without a hitch.</h3>
 			<ul class="highlights">
-				<li>Our tools actually work, provide consistent installations each and every time. </li>
+				<li>Our tools actually work and provide a consistent installation each and every time. </li>
 				<li>Sold worldwide to major manufacturers.</li>
 				<li>The savings are undeniable, Muro Auto-Feed systems have set a new standard.</li>
 				<li>Forget about getting on your hands and knees, work while standing up.</li>
@@ -25,7 +25,7 @@
 		<a href=""><img src="/applications/trailer/power-driver.png" alt="Power Driver Auto Feed Screw Driver with Handle"></a>
 		<div>
 			<h4><a href="">FLVL41 - Power Driver</a></h4>
-			<p>Tool for securing lighter gauge floors (wood to steel or aluminum). Purpose built coil feed system for OEM's. No one else compares.
+			<p>Purpose built tool for securing lighter gauge floors (wood to steel or aluminum) for OEM's. No one else compares.
 <strong><a href="">Find out more.</a></strong></p>
 		</div>
 	</article>
@@ -40,9 +40,9 @@
 	<article>
 		<a href=""><img src="/applications/trailer/ch7260-wall-skinning.png" alt="CH7260 - Wall Skinning"></a>
 		<div>
-			<h4><a href="">CH7260 - Wall Skinning
+			<h4><a href="">CH7260 - Metal Pro
 </a></h4>
-			<p>This tool coupled with our wall skinning screw provides a unique solution for wall fabrication.
+			<p>This tool coupled with our wall skinning screw provides a unique solution for side wall fabrication.
 <strong><a href=""> Find out more.</a></strong></p>
 		</div>
 	</article>
