Made some quick changes to products main page and started work on Accessories page.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,22 +1,22 @@
 <h1 class="index heading">PRODUCTS</h1>
 
 <div class="selection products no-margin-left">
-  <a href="/products/tools"><img src="products/tools.jpg" alt="Muro North America Tools"></a>
+  <a href="/products/tools"><img src="/products/tools.jpg" alt="Muro North America Tools"></a>
   <%= link_to "TOOLS", products_tools_path %>
 </div>
 
 <div class="selection products">
-  <a href="/products/screws"><img src="products/screws.jpg" alt="Muro North America Screws"></a>
+  <a href="/products/screws"><img src="/products/screws.jpg" alt="Muro North America Screws"></a>
   <%= link_to "SCREWS", products_screws_path %>
 </div>
 
 <div class="selection products">
-  <a href="/products/accessories"><img src="products/accessories.jpg" alt="Muro North America Accessories"></a>
+  <a href="/products/accessories"><img src="/products/accessories.jpg" alt="Muro North America Accessories"></a>
   <%= link_to "Accessories", products_accessories_path %>
 </div>
 
 <div class="selection products">
-  <a href="/products/specialty"><img src="products/peeler.jpg" alt="Muro North America Specialty"></a>
-  <%= link_to "Accessores", products_specialty_path %>
+  <a href="/products/specialty"><img src="/products/peeler.jpg" alt="Muro North America Specialty"></a>
+  <%= link_to "Specialty", products_specialty_path %>
 </div>
 
