--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,3 +7,7 @@
 @import 'products/tools';
 @import 'products/screws';
 @import 'accessories';
+@import 'products/specialty';
+@import 'customer_service';
+
+@import 'buttons';
