--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -89,7 +89,7 @@
 				<ul>
 					<li class="no-margin-top"><%= link_to "FAQs", customer_service_faqs_path %></li>
 					<li><%= link_to "Product Manuals", customer_service_product_manuals_path %></li>
-
+					<li><%= link_to "Product Registration", customer_service_product_registration_path %></li>
 					<li><%= link_to "Testimonials", customer_service_testimonials_path %></li>
 				</ul>
 			</li>
