Added fix to youtube video.

--- a/app/views/products/specialty.html.erb
+++ b/app/views/products/specialty.html.erb
@@ -41,7 +41,7 @@ potatoes… all your fruits and vegetables!</h2>
       <div class="peeler-video">
         <h3>See the Mass-a-Peel in action below!</h3>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Aqe24H5PZhs" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Aqe24H5PZhs?wmode=transparent" frameborder="0" allowfullscreen></iframe>
 
       </div>
   </section>
