--- a/app/views/customer_service/_countries.html.erb
+++ b/app/views/customer_service/_countries.html.erb
@@ -1,4 +1,7 @@
-<option value="Afghanistan">Afghanistan</option>
+      <option value>-- Please Select One -- </option>
+      <option value="Canada">Canada</option>
+      <option value="United States">United States</option>
+      <option value="Afghanistan">Afghanistan</option>
       <option value="Åland Islands">Åland Islands</option>
       <option value="Albania">Albania</option>
       <option value="Algeria">Algeria</option>
