Edited accessories and specialty pages.

--- a/app/assets/stylesheets/accessories.scss
+++ b/app/assets/stylesheets/accessories.scss
@@ -146,6 +146,11 @@
       background: #595656;
     }
 
+    tr.bold {
+      background: #cdcdcd;
+      color: #252525;
+    }
+
     td, th {
       border: 1px solid #2d2d2d;
       border-bottom: 1px solid #2d2d2d;
