--- a/app/views/products/accessories.html.erb
+++ b/app/views/products/accessories.html.erb
@@ -81,11 +81,10 @@ series of tools.</p>
 
       <div class="<%= tool.product_code %>">
         <%= raw tool.driver_bits.sub("<h4>Double Ended - Lasts Twice As Long (8-1/8” long)</h4>", "").sub("<h4>Double Ended - Lasts Twice As Long</h4>", "")%>
-
       </div>
-
-
     </div>
+
+
 
 
     <script>
@@ -97,4 +96,9 @@ series of tools.</p>
     });
     </script>
   <% end %>
+
 </section>
+
+  <div class="see_more_button go-back">
+    <a href="#"><h3>Back to Top</h3></a>
+  </div>
