--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -21,17 +21,19 @@
   }
 
   .go-back, .go-to {
-    margin:0px 0 40px !important;
+    margin:30px 0 40px !important;
     color: white;
     width: 150px !important;
     text-align: center;
 
+
     h3 {
       font-family: Helvetica-Bold;
+      font-size: 1.2em;
     }
   }
 
   .go-to {
-    width: 250px !important;
+    width: 300px !important;
     margin:20px 0 40px !important;
   }
