Added onto customer_service and FAQs pages.

--- a/app/views/customer_service/faqs.html.erb
+++ b/app/views/customer_service/faqs.html.erb
@@ -1,2 +1,327 @@
-<h1>CustomerService#faqs</h1>
-<p>Find me in app/views/customer_service/faqs.html.erb</p>
+<h2 class="heading">FREQUENTLY ASKED QUESTIONS</h2>
+<p>See if your question has already been answered below in this list of Frequently Asked Questiions if you don’t find your question here feel free to visit our <strong><a href="">Contact Section</a></strong> and connect with us through our online form. </p>
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>How long can I expect a bit to last (how many screws will it drive)?<img class="open-close" id="drop-down-1" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img id="faq_arrow_1" class="faq_arrow" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer1">
+    <span class="A">A.</span><p>Muro bits are a higher quality than the standards bits you would normally purchase, and all our bits are double ended – two tips (except for hex drive bits). That being said, life expectancy will vary depending on application and experience of the user. The key to long bit life is to make sure you keep constant pressure on the tool while the screw is being driven, do not to let the bit slip out of the screw
+recess; if the bit happens to stick in the recess, it is extremely important to pull straight up – do not
+wiggle the tool side to side.
+
+<br><br>In most cases a bit should last several boxes of screws – 1 pack (10 bits)  for every 80-100 boxes is a
+good gauge – make sure to always have a couple of extra, just in case.</p>
+  </div>
+</div>
+
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>How difficult is it to countersink the screws?<img id="drop-down-2" class="open-close" id="drop-down-2" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_2" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer2">
+    <span class="A">A.</span><p>The problem of inconsistent countersinking associated with driving screws by hand has been eliminated - all Muro Systems have a positive (hard) stop which helps to ensure constant screw depth each and every time – no more guess work, set it and forget it.
+
+  <br><br>Please refer to your instruction manual or the videos/pictures on the web site to learn more on how to setup your tool for optimum performance.</p>
+    </div>
+  </div>
+
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>Is the Muro T-Handle height adjustable? I am tall and find other brands a nuisance because I am still hunched over.<img id="drop-down-3" class="open-close" id="drop-down" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_3" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer3">
+    <span class="A">A.</span><p>All Muro stand-up tools have a handle that is easily adjustable. Just loosen the knob, tap it lightly to
+disengage the lock nut, set it to your optimum working height and then re-tighten the knob...all in less then one minute and no tools needed.</p>
+  </div>
+</div>
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>What is your tool warranty?<img class="open-close" id="drop-down-4" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_4" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer4">
+    <span class="A">A.</span><p>All Muro systems have a one year warranty (to the original purchaser) from the date of purchase. Tools must be registered (can be done quickly on-line) to qualify. Please refer to the warranty card that came with the tool for further details. <br><br>
+
+    Special Note: 3rd party motors are  not covered by Muro – you must contact that particular Brand’s Service Center for warranty repair.</p>
+  </div>
+</div>
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>How long has Muro been in business?<img class="open-close" id="drop-down-5" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_5" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer5">
+    <span class="A">A.</span><p>Muro has been in the Auto Feed business for over 25 years.<br><br>
+
+    Muro was involved with inventing Auto Feed Technology back in the 1980’s and has been building systems and collating fasteners ever since. We have an undeniable reputation in the professional ranks and are known as an industry innovator.</p>
+  </div>
+</div>
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>How much faster is it (using Auto Feed) vs. traditional methods?<img id="drop-down-6" class="open-close" id="drop-down-6" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_6" id="faq_arrow_6" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer6">
+    <span class="A">A.</span><p>Using Muro can be faster, most times much faster, except it is not just about the speed; there are many other benefits that can only be realized after an extended period and many advantages are unique to certain applications, industries or users. “Try it you’ll like it” has never been truer!</p>
+  </div>
+</div>
+
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>I build using IPE lumber, what do you have to help me?<img class="open-close" id="drop-down-7" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_7" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer7">
+    <span class="A">A.</span><p>Muro introduced our Patented Ejector Screw for all Exotic Hardwoods around 10 years ago; couple this with our Speed Driver (FD) tool and you have the best solution available in today’s marketplace - no more pre-drilling required. The performance of this screw is definitely a “jaw dropper”.</p>
+  </div>
+</div>
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>What size screws can you drive with a Muro?<img class="open-close" id="drop-down-8" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_8" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer8">
+    <span class="A">A.</span><p>Our screw range covers diameters from #6 to #14 and lengths from 5/8” to 4”.</p>
+  </div>
+</div>
+
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>How many screws are in your coils?<img class="open-close" id="drop-down-9" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_9" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer9">
+    <span class="A">A.</span><p>Depending on type/size of screw our coils hold 150, 110, 100 or 75 screws.</p>
+  </div>
+</div>
+
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>Can I use other brands of screws in a Muro tool?<img class="open-close" id="drop-down-10" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_10" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer10">
+    <span class="A">A.</span><p>Unfortunately no, to ensure a high quality product that works consistently, screw after screw, we
+    have engineered our tools to only run Muro collated screws.</p>
+  </div>
+</div>
+
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>Can you drive screws in heavy gauge steel, like C channel or I beam.<img class="open-close" id="drop-down-11" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_11" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer11">
+    <span class="A">A.</span><p>Yes, Muro has designed tools and screws for those types of jobs. We currently sell to a number of major OEM’s who are using these types of materials.</p>
+  </div>
+</div>
+
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>Can I mount a Muro attachment to my drill?<img class="open-close" id="drop-down-12" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_12" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer12">
+    <span class="A">A.</span><p>Muro attachments can only be mounted to a Drywall Screw Guns (the unit must have a clutch). Mounting hardware is unique to each Brand and model. Please click here to see which models we can mount to.</p>
+  </div>
+</div>
+
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>What kind of maintenance is needed for your tools?<img class="open-close" id="drop-down-13" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_13" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer13">
+    <span class="A">A.</span><p>Overall, not much is required; we do however recommend a regular cleaning - use an airline or a can
+    of compressed air to blow out the tool body and feeding mechanism.  Also, make sure that all air holes
+    are un-obstructed.<br><br>
+
+    Occasionally wipe down the guide poles – no lubrication is required, they are packed with grease and are self-lubricating.<br><br>
+    Please refer to the Tool Manual for more details
+    </p>
+  </div>
+</div>
+
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>I loaded my screws and they are sticking out past the end of the tool?<img class="open-close" id="drop-down-14" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_14" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer14">
+    <span class="A">A.</span><p>The coil tools have a Screw Guide that needs to be adjusted to accommodate various screw lengths.
+    <br><br>
+    Please refer to your Tool Manual for detailed instructions.
+    </p>
+  </div>
+</div>
+
+<div class="faq group">
+  <div class="question">
+    <span class="Q">Q.</span><p>My tool will not drive screws properly or they are only half way in?<img id="drop-down-15" class="open-close" id="drop-down" src="/products/accessories/triangle.png" alt=""></p>
+  </div>
+
+  <img class="faq_arrow" id="faq_arrow_15" src="/customer_service/faq_arrow.png" alt="frequently asked question">
+
+  <div class="answer" id="answer15">
+    <span class="A">A.</span><p>This, in most cases, is a very simple problem to fix and it can happen out of the blue - everything is working fine then all of a sudden it doesn’t work as it normally does:
+    <br><br>
+    1/ Check to make sure the motor is in forward; sometimes the reverse lever/button gets switched by accident. Fix – put tool back in forward.
+    <br><br>
+    2/Check the condition of the bit; a worn bit can just spin in the recess. Fix – flip or change the bit.
+    <br><Br>
+    3/ Check condition of the bit holder; over time it can wear. Fix – order a new bit holder.
+    <br><br>
+    4/ Keep constant pressure on the tool/screw (push down on handle bar) until the screw has been completely driven and you hear the clutch engage.
+    <br><br>
+   5/ A more serious problem is the clutch is worn out and it is just slipping. Fix - need to send the motor in for service.
+    <br><br>
+    If you have any other questions please <strong><%= link_to "click here", contact_path  %></strong> and complete the form.
+    </p>
+  </div>
+</div>
+
+
+<script>
+      $('.answer').hide();
+      $('.faq_arrow').hide();
+
+        $( "#drop-down-1").click(function(){
+          $('#drop-down-1').toggleClass('rotate');
+          $('#faq_arrow_1').fadeToggle();
+          $('#answer1').fadeToggle();
+        });
+
+        $( "#drop-down-2").click(function(){
+          $('#drop-down-2').toggleClass('rotate');
+          $('#faq_arrow_2').fadeToggle();
+          $('#answer2').fadeToggle();
+        });
+
+        $( "#drop-down-3").click(function(){
+          $('#drop-down-3').toggleClass('rotate');
+          $('#faq_arrow_3').fadeToggle();
+          $('#answer3').fadeToggle();
+        });
+
+        $( "#drop-down-4").click(function(){
+          $('#drop-down-4').toggleClass('rotate');
+          $('#faq_arrow_4').fadeToggle();
+          $('#answer4').fadeToggle();
+        });
+
+        $( "#drop-down-5").click(function(){
+          $('#drop-down-5').toggleClass('rotate');
+          $('#faq_arrow_5').fadeToggle();
+          $('#answer5').fadeToggle();
+        });
+
+        $( "#drop-down-6").click(function(){
+          $('#drop-down-6').toggleClass('rotate');
+          $('#faq_arrow_6').fadeToggle();
+          $('#answer6').fadeToggle();
+        });
+
+        $( "#drop-down-7").click(function(){
+          $('#drop-down-7').toggleClass('rotate');
+          $('#faq_arrow_7').fadeToggle();
+          $('#answer7').fadeToggle();
+        });
+
+        $( "#drop-down-8").click(function(){
+          $('#drop-down-8').toggleClass('rotate');
+          $('#faq_arrow_8').fadeToggle();
+          $('#answer8').fadeToggle();
+        });
+
+        $( "#drop-down-9").click(function(){
+          $('#drop-down-9').toggleClass('rotate');
+          $('#faq_arrow_9').fadeToggle();
+          $('#answer9').fadeToggle();
+        });
+
+        $( "#drop-down-10").click(function(){
+          $('#drop-down-10').toggleClass('rotate');
+          $('#faq_arrow_10').fadeToggle();
+          $('#answer10').fadeToggle();
+        });
+
+        $( "#drop-down-11").click(function(){
+          $('#drop-down-11').toggleClass('rotate');
+          $('#faq_arrow_11').fadeToggle();
+          $('#answer11').fadeToggle();
+        });
+
+        $( "#drop-down-12").click(function(){
+          $('#drop-down-12').toggleClass('rotate');
+          $('#faq_arrow_12').fadeToggle();
+          $('#answer12').fadeToggle();
+        });
+
+        $( "#drop-down-13").click(function(){
+          $('#drop-down-13').toggleClass('rotate');
+          $('#faq_arrow_13').fadeToggle();
+          $('#answer13').fadeToggle();
+        });
+
+        $( "#drop-down-14").click(function(){
+          $('#drop-down-14').toggleClass('rotate');
+          $('#faq_arrow_14').fadeToggle();
+          $('#answer14').fadeToggle();
+        });
+
+        $( "#drop-down-15").click(function(){
+          $('#drop-down-15').toggleClass('rotate');
+          $('#faq_arrow_15').fadeToggle();
+          $('#answer15').fadeToggle();
+        });
+
+    </script>
+
+<div class="see_more_button go-back">
+    <a href="#"><h3>Back to Top</h3></a>
+  </div>
